# choki

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  structs.rs
src/src/: request.rs  response.rs  structs.rs
src/src/utils/: logger.rs  mod.rs  utils.rs
src/utils/: mod.rs  request.rs  response.rs  structs.rs  utils.rs
tests/: index.html
tests/static/: index.html
